# vehicle_sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: controller.yaml
external_models/osrf_citysim/: README.md
launch/: gazebo_test.launch
launcher/vehicle_sim_launcher/: CMakeLists.txt  package.xml
launcher/vehicle_sim_launcher/launch/: gazebo7_citysim_autoware.launch  gazebo9_citysim_autoware.launch  gazebo_autoware.launch  gazebo_empty_world.launch  gazebo_mcity_autoware.launch  world_test.launch
launcher/vehicle_sim_launcher/scripts/: download_model.sh  integrate_world_files.sh
sensor_model/camera/camera_description/: CMakeLists.txt  package.xml
sensor_model/imu/imu_description/: CMakeLists.txt
urdf/: actuator.xacro  body.xacro  steering.gazebo  steering.xacro  vehicle.gazebo  vehicle.xacro  wheel.gazebo  wheel.xacro
vehicle/vehicle_model/urdf/: steering.xacro
vehicle/vehicle_sim_interface/: CMakeLists.txt  package.xml
vehicle/vehicle_sim_interface/src/: vehicle_input_subscriber.cpp
vehicle_model/: CMakeLists.txt  package.xml
vehicle_model/config/: controller.yaml
vehicle_model/dae/: banana.dae  wheel.dae
vehicle_model/launch/: gazebo7_citysim_autoware.launch  gazebo9_citysim_autoware.launch  gazebo_autoware.launch  gazebo_empty_world.launch  gazebo_mcity_autoware.launch  gazebo_test.launch  world_test.launch
vehicle_model/scripts/: download_model.sh  setup.sh
vehicle_model/src/: twist2gazebo.cpp  twiststamped2gazebo.cpp  vehicle_info_publisher.cpp
vehicle_model/urdf/: body.xacro  steering.xacro  vehicle.xacro  wheel.xacro
vehicle_model/worlds/: citysim_gazebo7.world  citysim_gazebo9.world  mcity.world
world/: autoware.world
xacro/: vehicle.xacro  wheel.xacro
